--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,10 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-set(GAME_NAME "station-game")
-
 set(CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD 20)
 
-project(${GAME_NAME} VERSION 0.1)
+project(miri_game VERSION 0.1)
 
 option(ENABLE_TESTS "Enable Tests" OFF)
 
@@ -23,15 +21,16 @@ if(ENABLE_TESTS)
 else()
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/")
     add_subdirectory("src/main/")
-
 endif()
 
-add_executable(${GAME_NAME}
+add_subdirectory(src)
+add_executable(miri_game
     ${MAIN_SOURCES}
+    ${ENGINE_SOURCES}
 )
 
 if(WIN32)
-    target_include_directories(${GAME_NAME} PRIVATE
+    target_include_directories(miri_game PRIVATE
         "${CMAKE_SOURCE_DIR}/thirdparty/PDCurses/"
         "${CMAKE_SOURCE_DIR}/thirdparty/SDL2/include/"
     )
@@ -49,8 +48,9 @@ endif()
 if(ENABLE_TESTS)
     set(MIRI_LIBRARIES ${MIRI_LIBRARIES} PUBLIC GTest::gtest_main)
     include(GoogleTest)
-    gtest_discover_tests(${GAME_NAME})
+    gtest_discover_tests(miri_game)
 endif()
 
 
-target_link_libraries(${GAME_NAME} PRIVATE ${MIRI_LIBRARIES})
+target_link_libraries(miri_game PRIVATE ${MIRI_LIBRARIES})
+target_include_directories(miri_game PUBLIC "${CMAKE_SOURCE_DIR}/src")
