add string + string test

--- a/src/simula24/core/CMakeLists.txt
+++ b/src/simula24/core/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(CORE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/memory/memory.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/stl/string.cpp
     PARENT_SCOPE
 )
