added error enum + windows mini dump generator

--- a/src/simula24/CMakeLists.txt
+++ b/src/simula24/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_subdirectory(core)
+add_subdirectory(platform)
 
 
 set(ENGINE_SOURCES 
     ${CORE_SOURCES}
-
+    ${PLATFORM_SOURCES}
     PARENT_SCOPE
 )
+
