--- a/simula24/platform/windows/CMakeLists.txt
+++ b/simula24/platform/windows/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(WINDOWS_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/seh.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/file.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/thread/mutex.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/thread/thread.cpp
     PARENT_SCOPE
 )
