--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,16 +31,16 @@ add_executable(simula24
 
 if(WIN32)
     target_include_directories(simula24 PRIVATE
-        "${CMAKE_SOURCE_DIR}/thirdparty/PDCurses/"
         "${CMAKE_SOURCE_DIR}/thirdparty/SDL2/include/"
         "${CMAKE_SOURCE_DIR}/thirdparty/SDL2_ttf/include/"
+        "${CMAKE_SOURCE_DIR}/thirdparty/SDL2_image/include/"
     )
 
     set(SIMULA24_LIBRARIES ${SIMULA24_LIBRARIES}
-        "${CMAKE_SOURCE_DIR}/build/pdcurses.lib"
         "${CMAKE_SOURCE_DIR}/build/SDL2.lib"
         "${CMAKE_SOURCE_DIR}/build/SDL2_ttf.lib"
         "${CMAKE_SOURCE_DIR}/build/SDL2main.lib"
+        "${CMAKE_SOURCE_DIR}/build/SDL2_image.lib"
     )
     add_compile_options("/wd9025")
 elseif(UNIX)
