added *nix crash handler

--- a/simula24/platform/CMakeLists.txt
+++ b/simula24/platform/CMakeLists.txt
@@ -4,4 +4,9 @@ if(WIN32)
 
     set(PLATFORM_SOURCES ${WINDOWS_SOURCES} PARENT_SCOPE)
 
+elseif(UNIX)
+    message("Building for *nix")
+    add_subdirectory(unix)
+    set(PLATFORM_SOURCES ${UNIX_SOURCES} PARENT_SCOPE)
+
 endif()
