Fixed const-ness issues with const-allocator

--- a/simula24/game/tile/CMakeLists.txt
+++ b/simula24/game/tile/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(TILE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/TileConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheet.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/TileSheetParser.cpp
     PARENT_SCOPE
 )
