--- a/simula24/CMakeLists.txt
+++ b/simula24/CMakeLists.txt
@@ -1,11 +1,13 @@
 add_subdirectory(core)
 add_subdirectory(platform)
+add_subdirectory(graphics)
 add_subdirectory(game)
 
 
 set(ENGINE_SOURCES 
     ${CORE_SOURCES}
     ${PLATFORM_SOURCES}
+    ${GRAPHICS_SOURCES}
     ${GAME_SOURCES}
     PARENT_SCOPE
 )
