Added basic app window

--- a/simula24/graphics/CMakeLists.txt
+++ b/simula24/graphics/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(GRAPHICS_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/Graphics.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/AppWindow.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/AppWindowMgr.cpp
 
     PARENT_SCOPE
 )
