added basic texture manager. Move+copy constructor updates

--- a/simula24/graphics/CMakeLists.txt
+++ b/simula24/graphics/CMakeLists.txt
@@ -2,6 +2,7 @@ set(GRAPHICS_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/Graphics.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/AppWindow.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/AppWindowMgr.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/TextureManager.cpp
 
     PARENT_SCOPE
 )
