Added *basic* object table + map

--- a/simula24/game/CMakeLists.txt
+++ b/simula24/game/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(tile)
 
 set(GAME_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/object/ObjectTable.cpp
     ${TILE_SOURCES}
     PARENT_SCOPE
 )
