Added point object and made operator[] constexpr for stl::array

--- a/simula24/CMakeLists.txt
+++ b/simula24/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(core)
+add_subdirectory(math)
 add_subdirectory(platform)
 add_subdirectory(graphics)
 add_subdirectory(game)
@@ -6,6 +7,7 @@ add_subdirectory(game)
 
 set(ENGINE_SOURCES 
     ${CORE_SOURCES}
+    ${MATH_SOURCES}
     ${PLATFORM_SOURCES}
     ${GRAPHICS_SOURCES}
     ${GAME_SOURCES}
