move most main.cpp code to Application class

--- a/simula24/game/CMakeLists.txt
+++ b/simula24/game/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(tile)
 
 set(GAME_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/object/ObjectTable.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp
     ${TILE_SOURCES}
     PARENT_SCOPE
 )
