--- a/simula24/CMakeLists.txt
+++ b/simula24/CMakeLists.txt
@@ -2,7 +2,8 @@ add_subdirectory(core)
 add_subdirectory(math)
 add_subdirectory(platform)
 add_subdirectory(graphics)
-add_subdirectory(game)
+add_subdirectory(app)
+#add_subdirectory(smcore)
 
 
 set(ENGINE_SOURCES 
