--- a/simula24/graphics/CMakeLists.txt
+++ b/simula24/graphics/CMakeLists.txt
@@ -5,6 +5,7 @@ set(GRAPHICS_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/AppWindow.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/AppWindowMgr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TextureManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/renderer/RenderManager.cpp
     ${TILE_SOURCES}
 
     PARENT_SCOPE
