Moved some stuff around

--- a/simula24/CMakeLists.txt
+++ b/simula24/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(math)
 add_subdirectory(platform)
 add_subdirectory(graphics)
 add_subdirectory(objectmanager)
-#add_subdirectory(smcore)
+add_subdirectory(smcore)
 
 
 set(ENGINE_SOURCES 
@@ -12,6 +12,7 @@ set(ENGINE_SOURCES
     ${PLATFORM_SOURCES}
     ${GRAPHICS_SOURCES}
     ${OBJECT_MANAGER_SOURCES}
+    ${SIMULATION_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp
     PARENT_SCOPE
 )
