--- a/simula24/smcore/CMakeLists.txt
+++ b/simula24/smcore/CMakeLists.txt
@@ -1,5 +1,7 @@
-set(SIMULATION_SOURCES
+add_subdirectory(job)
 
+set(SIMULATION_SOURCES
+    ${JOB_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/Simulation.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/map/ObjectMap.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/entity/Civilian.cpp
