Renamed Civilan to crew memeber

--- a/simula24/smcore/CMakeLists.txt
+++ b/simula24/smcore/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SIMULATION_SOURCES
     ${JOB_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/Simulation.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/map/ObjectMap.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/entity/Civilian.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/entity/CrewMember.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/path/AStar.cpp
 
     PARENT_SCOPE
