added cluster generation/rendering
Remove test code in application.cpp please

--- a/simula24/smcore/CMakeLists.txt
+++ b/simula24/smcore/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SIMULATION_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/map/ObjectMap.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/entity/CrewMember.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/path/AStar.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/localsystem/LocalCluster.cpp
 
     PARENT_SCOPE
 )
