added default station

--- a/simula24/smcore/CMakeLists.txt
+++ b/simula24/smcore/CMakeLists.txt
@@ -7,6 +7,6 @@ set(SIMULATION_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/entity/CrewMember.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/path/AStar.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/localsystem/LocalCluster.cpp
-
+    ${CMAKE_CURRENT_SOURCE_DIR}/station/SpaceStation.cpp
     PARENT_SCOPE
 )
