added basic tilesheet database

--- a/simula24/graphics/tile/CMakeLists.txt
+++ b/simula24/graphics/tile/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TILE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/TileConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheet.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/TileSheetDatabase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheetParser.cpp
     PARENT_SCOPE
 )
