--- a/simula24/graphics/tile/CMakeLists.txt
+++ b/simula24/graphics/tile/CMakeLists.txt
@@ -3,5 +3,6 @@ set(TILE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheet.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheetDatabase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TileSheetParser.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/SheetLoader.cpp
     PARENT_SCOPE
 )
