--- a/simula24/core/CMakeLists.txt
+++ b/simula24/core/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CORE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/log/log.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/log/sink/ConsoleSink.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/log/sink/FileSink.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/system/Clock.cpp
+
     PARENT_SCOPE
 )
 
