--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,6 @@ target_include_directories(simula24 PUBLIC
 )
 
 target_compile_definitions(simula24 PRIVATE
-    "$<$<CONFIG:Release>:SIMULA24_RELEASE=1>"
-    "$<$<CONFIG:Debug>:SIMULA24_DEBUG=1>"
+    "$<$<CONFIG:Release>:SIMULA24_RELEASE>"
+    "$<$<CONFIG:Debug>:SIMULA24_DEBUG>"
 )
