--- a/simula24/core/CMakeLists.txt
+++ b/simula24/core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CORE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/log/sink/ConsoleSink.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/log/sink/FileSink.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/system/Clock.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/system/Scheduler.cpp
 
     PARENT_SCOPE
 )
